--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,10 @@
         "issues": "https://github.com/laravel/framework/issues",
         "source": "https://github.com/laravel/framework"
     },
-    "authors": [
-        {
-            "name": "Taylor Otwell",
-            "email": "taylor@laravel.com"
-        }
-    ],
+    "authors": [{
+        "name": "Taylor Otwell",
+        "email": "taylor@laravel.com"
+    }],
     "require": {
         "php": ">=5.6.4",
         "ext-mbstring": "*",
