--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "source": "https://github.com/laravel/framework"
     },
     "authors": [{
-        "name": "ashok",
+        "name": "ashok ramnath",
         "email": "ashok@laravel.com"
     }],
     "require": {
